# Phaten

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  imgui.ini
Phaten/: CMakeLists.txt  main.cpp
Phaten/Core/: Allocator.cpp  Allocator.hpp  Assert.hpp  Core.hpp  Logger.hpp  Ptr.cpp  Ptr.hpp
Phaten/Graphics/: FrameBuffer.cpp  FrameBuffer.hpp  Graphics.cpp  Graphics.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsDefs.cpp  GraphicsDefs.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Phaten/IO/: Assert.hpp  Logger.hpp  Stream.cpp  Stream.hpp  StringHash.cpp  StringHash.hpp  StringUtils.cpp  StringUtils.hpp
Phaten/Input/: Application.cpp  Application.hpp  ImGuiCompile.cpp  ImGuiPlugin.cpp  ImGuiPlugin.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
Phaten/Math/: IntVector.cpp  IntVector.hpp  Math.hpp  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Space.cpp  Space.hpp  Transform.cpp  Transform.hpp  Vector.cpp  Vector.hpp
Phaten/Object/: Allocator.hpp  Object.cpp  Object.hpp  Ptr.cpp  Ptr.hpp
Phaten/Renderer/: Camera.cpp  Camera.hpp  StaticGeometry.cpp  StaticGeometry.hpp  Text.cpp  Text.hpp  TextRenderer.cpp  TextRenderer.hpp
Phaten/Resource/: Image.cpp  Image.hpp  Resource.cpp  Resource.hpp  ResourceLoader.cpp  ResourceLoader.hpp
Phaten/Scene/: SceneCamera.cpp  SceneCamera.hpp  SceneCameraController.cpp  SceneCameraController.hpp
Phaten/Shaders/: Post.glsl  (+10 more)
(+12 files in other folders)
